# PyQtThemeSettings

./: LICENSE  README.md  pyproject.toml
src/PyQtThemeSettings/: __init__.py  settings.py
src/PyQtThemeSettings/ui/: settingswindowUI.py
